--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-hant">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="室內設計裝修網站">
-    <meta name="keywords" content="室內、設計、裝修、施工、工程"> 
+    <meta name="keywords" content="室內、設計、裝修、施工、工程">
     <title>妝修 interior design</title>
     <link rel="stylesheet" href="./css/cssreset.css">
     <link rel="stylesheet" href="./css/index.css">
@@ -13,7 +14,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./src/js/lightslider.js"></script>
 </head>
+
 <body>
+    <!-- 123456 -->
     <header class="header">
         <div class="background">
             <section id="movepic"></section>
@@ -41,39 +44,39 @@
     </header>
     <section class="section01">
         <div class="demo">
-            <div class="item"> 
-                <span class="title01">Project</span>         
+            <div class="item">
+                <span class="title01">Project</span>
                 <div class="clearfix" style="max-width:1000px;">
                     <ul id="image-gallery" class="gallery list-unstyled cS-hidden">
-                        <li> 
-                            <a href="./project.html"><img src="./img/slider01.jpg"/></a>
+                        <li>
+                            <a href="./project.html"><img src="./img/slider01.jpg" /></a>
                         </li>
-                        <li> 
-                            <a href="./project.html"><img src="./img/slider03.jpg"/></a>
+                        <li>
+                            <a href="./project.html"><img src="./img/slider03.jpg" /></a>
                         </li>
-                        <li> 
-                            <a href="./project.html"><img src="./img/slider04.jpg"/></a>
+                        <li>
+                            <a href="./project.html"><img src="./img/slider04.jpg" /></a>
                         </li>
-                        <li> 
-                            <a href="./project.html"><img src="./img/slider02.jpg"/></a>
+                        <li>
+                            <a href="./project.html"><img src="./img/slider02.jpg" /></a>
                         </li>
-                        <li> 
-                            <a href="./project.html"><img src="./img/slider05.jpg"/></a>
+                        <li>
+                            <a href="./project.html"><img src="./img/slider05.jpg" /></a>
                         </li>
-                        <li> 
-                            <a href="./project.html"><img src="./img/slider07.jpg"/></a>
+                        <li>
+                            <a href="./project.html"><img src="./img/slider07.jpg" /></a>
                         </li>
-                        <li> 
-                            <a href="./project.html"><img src="./img/slider06.jpg"/></a>
+                        <li>
+                            <a href="./project.html"><img src="./img/slider06.jpg" /></a>
                         </li>
-                        <li> 
-                            <a href="./project.html"><img src="./img/slider08.jpg"/></a>
+                        <li>
+                            <a href="./project.html"><img src="./img/slider08.jpg" /></a>
                         </li>
                     </ul>
                 </div>
             </div>
             <a href="./project.html" class="projectmore">查看更多</a>
-        </div>	
+        </div>
     </section>
     <div class="background01">
         <p class="design1">Design</p>
@@ -127,7 +130,8 @@
         <div class="s3box">
             <div class="s3txt">
                 <h1>主張對睿智的渴求，堅持把雋永的設計方針融入空間的思考模式。</h1>
-                <p>我們喜愛構思精巧、雋永的設計手法，這一理念也延伸到我們運作的各方面。對於每個空間來說，一絲不苟的設計必不可少；同樣，我們實用的傢俱配置也出自細緻的考量，既方便使用，又造型美觀。我們在專案開發時，首先考慮的條件一定是在設計中利用光影、色系等元素。我們真誠希望能夠把家和諧融入未來主人的心中，我們堅信，精心構思的設計會讓生活更美好。</p>
+                <p>我們喜愛構思精巧、雋永的設計手法，這一理念也延伸到我們運作的各方面。對於每個空間來說，一絲不苟的設計必不可少；同樣，我們實用的傢俱配置也出自細緻的考量，既方便使用，又造型美觀。我們在專案開發時，首先考慮的條件一定是在設計中利用光影、色系等元素。我們真誠希望能夠把家和諧融入未來主人的心中，我們堅信，精心構思的設計會讓生活更美好。
+                </p>
                 <a href="#" class="ideamore">點此查看</a>
             </div>
             <div class="asideimg">
@@ -214,6 +218,7 @@
         <span class="footerline"></span>
         <p>Copy right 2020, All Right Reserved | By Sam</p>
     </footer>
-   <script src="./js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
+
 </html>
